--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
         "psr-4": {
             "Brazilian\\Salary\\Test\\": "tests/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.1"
     }
 }
