--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.1"
+    },
+    "scripts": {
+        "phpunit": "vendor/bin/phpunit tests --color=always"
     }
 }
