--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,11 @@
         "phpunit/phpunit": "^7.1"
     },
     "scripts": {
-        "phpunit": "vendor/bin/phpunit tests --color=always"
+        "phpunit": "vendor/bin/phpunit tests --color=always",
+        "phpcs": "vendor/bin/phpcs",
+        "phpcbf": "vendor/bin/phpcbf"
+    },
+    "require": {
+        "squizlabs/php_codesniffer": "^3.2"
     }
 }
