--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,12 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.1"
+        "phpunit/phpunit": "^7.1",
+        "squizlabs/php_codesniffer": "^3.2"
     },
     "scripts": {
         "phpunit": "vendor/bin/phpunit",
         "phpcs": "vendor/bin/phpcs",
         "phpcbf": "vendor/bin/phpcbf"
-    },
-    "require": {
-        "squizlabs/php_codesniffer": "^3.2"
     }
 }
