--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.1",
-        "squizlabs/php_codesniffer": "^3.2"
+        "squizlabs/php_codesniffer": "^3.2",
+        "psy/psysh": "^0.9.3"
     },
     "scripts": {
         "phpunit": "vendor/bin/phpunit",
