Fix some errors in style code and adjusts Composer scripts

--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,8 @@
         "phpcbf": "vendor/bin/phpcbf",
         "tests": [
             "@phpunit",
-            "@phpcs",
-            "@phpcbf"
+            "@phpcbf",
+            "@phpcs"
         ]
     }
 }
